Working successfully on dummy example from slides

--- a/Assignments/Assignment02/Assignment#2c-Text-Classification-Solution.ipynb
+++ b/Assignments/Assignment02/Assignment#2c-Text-Classification-Solution.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 144,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -357,17 +357,22 @@
     "        maxprob = 0.0 \n",
     "        maxclass = self.classes[0]\n",
     "        for k in self.classes: \n",
-    "            prob = 1.0\n",
+    "            prob = 0.0\n",
     "            for w in wordcounts.keys(): \n",
-    "                print 'wordcount[w] =', w, wordcounts[w]\n",
-    "                prob *= ((1.+self.vocab[w][k])/(vocablen + self.wordperclasscounts[k]))**(wordcounts[w])\n",
+    "                #print 'wordcount[w] =', w, wordcounts[w]\n",
+    "                num = (1.+self.vocab[w][k])\n",
+    "                denum = (vocablen + self.wordperclasscounts[k])\n",
+    "                power = wordcounts[w]\n",
+    "                #prob *= (num/denum)**(power)\n",
+    "                prob += power * (log(num) - log(denum))\n",
+    "                #print self.vocab[w][k], '+ 1 /',vocablen, '+', self.wordperclasscounts[k], \n",
     "            prob += ((1. * self.classcounts[k])/self.nexamples*1.)\n",
-    "            \n",
+    "            #print 'prior =', ((1. * self.classcounts[k])/self.nexamples*1.)\n",
     "            if prob > maxprob: \n",
     "                maxprob = prob \n",
     "                maxclass = k\n",
     "        #raise NotImplementedError()\n",
-    "        return maxclass, maxprob\n",
+    "        return maxclass\n",
     "        "
    ]
   },
@@ -388,30 +393,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 145,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "wordcount[w] = japan 1\n",
-      "wordcount[w] = chinese 3\n",
-      "wordcount[w] = tokyo 1\n",
-      "wordcount[w] = japan 1\n",
-      "wordcount[w] = chinese 3\n",
-      "wordcount[w] = tokyo 1\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "('c', 0.7504016183732969)"
+       "'c'"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 146,
    "metadata": {
     "collapsed": false
    },
@@ -497,7 +490,6 @@
      "text": [
       "[Info] training a classifier for following classes neg, pos\n",
       "[Info] testing a classifier\n",
-      "vocab length = 43915\n",
       "[Info] Accuracy = 0.5\n"
      ]
     }
