renamed assignment 2c, and working naive bayes working successfuly now

--- a/Assignments/Assignment02/Assignment#2c-Text-Classification.ipynb
+++ b/Assignments/Assignment02/Assignment#2c-Text-Classification.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -101,28 +101,6 @@
     "    # YOUR CODE HERE\n",
     "    res = re.sub(r'[^ a-zA-Z]', '', string)\n",
     "    return res.lower().split()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['hello', 'its', 'me']"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "parse_string('[ hello it\\'s me')"
    ]
   },
   {
@@ -232,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -330,6 +308,7 @@
     "        \n",
     "        nexamples, nfeatures=X.shape\n",
     "        # YOUR CODE HERE\n",
+    "        \n",
     "        out = np.zeros(shape=(nexamples,), dtype='S3')\n",
     "        for i, example in enumerate(X): \n",
     "            out[i] = (self.predict(example))\n",
@@ -354,31 +333,28 @@
     "        for w in words: \n",
     "            wordcounts[w] += 1 \n",
     "        \n",
-    "        maxprob = 0.0 \n",
-    "        maxclass = self.classes[0]\n",
+    "        classprobs = dict()\n",
+    "         \n",
     "        for k in self.classes: \n",
     "            prob = 0.0\n",
     "            for w in wordcounts.keys(): \n",
-    "                #print 'wordcount[w] =', w, wordcounts[w]\n",
     "                num = (1.+self.vocab[w][k])\n",
     "                denum = (vocablen + self.wordperclasscounts[k])\n",
     "                power = wordcounts[w]\n",
-    "                #prob *= (num/denum)**(power)\n",
+    "                \n",
     "                prob += power * (log(num) - log(denum))\n",
-    "                #print self.vocab[w][k], '+ 1 /',vocablen, '+', self.wordperclasscounts[k], \n",
     "            prob += ((1. * self.classcounts[k])/self.nexamples*1.)\n",
-    "            #print 'prior =', ((1. * self.classcounts[k])/self.nexamples*1.)\n",
-    "            if prob > maxprob: \n",
-    "                maxprob = prob \n",
-    "                maxclass = k\n",
+    "            \n",
+    "            classprobs[k] = prob\n",
     "        #raise NotImplementedError()\n",
-    "        return maxclass\n",
+    " \n",
+    "        return max(classprobs, key=classprobs.get)\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -393,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -404,7 +380,7 @@
        "'c'"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -439,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -463,11 +439,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "tools.py:549: VisibleDeprecationWarning: using a non-integer number instead of an integer will result in an error in the future\n",
+      "  traindata.append(Xt[ridx[:ntrainex],:])\n",
+      "tools.py:550: VisibleDeprecationWarning: using a non-integer number instead of an integer will result in an error in the future\n",
+      "  trainlabels.append(Yt[ridx[:ntrainex]])\n",
+      "tools.py:552: VisibleDeprecationWarning: using a non-integer number instead of an integer will result in an error in the future\n",
+      "  testdata.append(Xt[ridx[ntrainex:],:])\n",
+      "tools.py:553: VisibleDeprecationWarning: using a non-integer number instead of an integer will result in an error in the future\n",
+      "  testlabels.append(Yt[ridx[ntrainex:]])\n"
+     ]
+    }
+   ],
    "source": [
     "X=files_to_strings(tX) # read files and convert each file into set of strings and return an numpy array\n",
     "X = X.reshape((X.shape[0], 1))\n",
@@ -479,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -490,7 +481,9 @@
      "text": [
       "[Info] training a classifier for following classes neg, pos\n",
       "[Info] testing a classifier\n",
-      "[Info] Accuracy = 0.5\n"
+      "neg\n",
+      "pos\n",
+      "[Info] Accuracy = 0.828333333333\n"
      ]
     }
    ],
@@ -515,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -541,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -559,20 +552,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "accuracy = 0.5\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "Acc must be greater then 77% you are doing something wrong",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-73-ebcddb42954d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0macc\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpclasses\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mtestlabels\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtestlabels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0;34m'accuracy ='\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0macc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0massert_greater\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0macc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.77\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Acc must be greater then 77% you are doing something wrong\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/home/muneebaadil/anaconda2/lib/python2.7/unittest/case.pyc\u001b[0m in \u001b[0;36massertGreater\u001b[0;34m(self, a, b, msg)\u001b[0m\n\u001b[1;32m    940\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    941\u001b[0m             \u001b[0mstandardMsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'%s not greater than %s'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0msafe_repr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msafe_repr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 942\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfail\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_formatMessage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstandardMsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    943\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    944\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0massertGreaterEqual\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ma\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/muneebaadil/anaconda2/lib/python2.7/unittest/case.pyc\u001b[0m in \u001b[0;36mfail\u001b[0;34m(self, msg)\u001b[0m\n\u001b[1;32m    408\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mfail\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    409\u001b[0m         \u001b[0;34m\"\"\"Fail immediately, with the given message.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 410\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfailureException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    411\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    412\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0massertFalse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Acc must be greater then 77% you are doing something wrong"
+      "accuracy = 0.828333333333\n"
      ]
     }
    ],
@@ -589,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -602,21 +582,7 @@
      "solution": false
     }
    },
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "'pos' != 'neg'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-95-d1dac4f7bb02>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0massert_equal\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mtrue_nb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcomment_pos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"pos\"\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m \u001b[0massert_equal\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0mtrue_nb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcomment_neg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"neg\"\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0massert_equal\u001b[0m\u001b[0;34m(\u001b[0m \u001b[0minverted_nb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcomment_pos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"neg\"\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/muneebaadil/anaconda2/lib/python2.7/unittest/case.pyc\u001b[0m in \u001b[0;36massertEqual\u001b[0;34m(self, first, second, msg)\u001b[0m\n\u001b[1;32m    511\u001b[0m         \"\"\"\n\u001b[1;32m    512\u001b[0m         \u001b[0massertion_func\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getAssertEqualityFunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 513\u001b[0;31m         \u001b[0massertion_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    514\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    515\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0massertNotEqual\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfirst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/muneebaadil/anaconda2/lib/python2.7/unittest/case.pyc\u001b[0m in \u001b[0;36m_baseAssertEqual\u001b[0;34m(self, first, second, msg)\u001b[0m\n\u001b[1;32m    504\u001b[0m             \u001b[0mstandardMsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'%s != %s'\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0msafe_repr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfirst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msafe_repr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msecond\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    505\u001b[0m             \u001b[0mmsg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_formatMessage\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstandardMsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 506\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfailureException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    507\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    508\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0massertEqual\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfirst\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msecond\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmsg\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: 'pos' != 'neg'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nose.tools import assert_equal\n",
     "\n",
@@ -664,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -697,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -706,18 +672,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Info] Fold 1 Accuracy = 0.815\n",
-      "[Info] Fold 2 Accuracy = 0.81\n",
-      "[Info] Fold 3 Accuracy = 0.8\n",
-      "[Info] Fold 4 Accuracy = 0.83\n",
-      "[Info] Fold 5 Accuracy = 0.845\n",
-      "[Info] Fold 6 Accuracy = 0.8\n",
-      "[Info] Fold 7 Accuracy = 0.825\n",
+      "[Info] Fold 1 Accuracy = 0.78\n",
+      "[Info] Fold 2 Accuracy = 0.76\n",
+      "[Info] Fold 3 Accuracy = 0.845\n",
+      "[Info] Fold 4 Accuracy = 0.815\n",
+      "[Info] Fold 5 Accuracy = 0.825\n",
+      "[Info] Fold 6 Accuracy = 0.855\n",
+      "[Info] Fold 7 Accuracy = 0.83\n",
       "[Info] Fold 8 Accuracy = 0.78\n",
-      "[Info] Fold 9 Accuracy = 0.81\n",
-      "[Info] Fold 10 Accuracy = 0.845\n",
-      "[0.81499999999999995, 0.81000000000000005, 0.80000000000000004, 0.82999999999999996, 0.84499999999999997, 0.80000000000000004, 0.82499999999999996, 0.78000000000000003, 0.81000000000000005, 0.84499999999999997]\n",
-      "[Info] Mean Accuracy = 0.816\n"
+      "[Info] Fold 9 Accuracy = 0.835\n",
+      "[Info] Fold 10 Accuracy = 0.81\n",
+      "[0.78000000000000003, 0.76000000000000001, 0.84499999999999997, 0.81499999999999995, 0.82499999999999996, 0.85499999999999998, 0.82999999999999996, 0.78000000000000003, 0.83499999999999996, 0.81000000000000005]\n",
+      "[Info] Mean Accuracy = 0.8135\n"
      ]
     }
    ],
