Cleaned first two parts' notebook files, and added answers to inline questions

--- a/Assignments/Assignment02/Assignment#2a-Gaussian Bayes Rule-with-cv-Solution.ipynb
+++ b/Assignments/Assignment02/Assignment#2a-Gaussian Bayes Rule-with-cv-Solution.ipynb
@@ -663,7 +663,7 @@
    "metadata": {},
    "source": [
     "## Question: What can you conclude from the above decision Region\n",
-    "#### Answer: The two features for iris-versicolor class are possitively co-related. While two features for seem independent of each other since the class' gaussian seems rather axis-aligned."
+    "#### Answer: The two features for iris-versicolor class are possitively co-related. While two features for Iris-setosa seem independent of each other since the class' gaussian seems rather axis-aligned."
    ]
   },
   {
@@ -966,15 +966,6 @@
     "print 'Best features combination =', bestcombo, \n",
     "print 'with accuracy', (bestmatches * 100.) / len(Ytest)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
