Added stop words implementation; accuracy = 83.1%

--- a/Assignments/Assignment02/Assignment#2c-Text-Classification.ipynb
+++ b/Assignments/Assignment02/Assignment#2c-Text-Classification.ipynb
@@ -76,7 +76,7 @@
     "import re\n",
     "import bs4\n",
     "\n",
-    "def parse_string(string): \n",
+    "def parse_string(string, **kwargs): \n",
     "    \"\"\"\"\n",
     "        Parse the input string and tokenize it using regular expressisons:\n",
     "        First clean the string such that it does not have any punctuation or number, it must only have a-z and A-Z.\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -246,10 +246,13 @@
     "\n",
     "class NaiveBayes:\n",
     "    ''' Implements the Naive Bayes For Text Classification... '''\n",
-    "    def __init__(self, classes):\n",
+    "    def __init__(self, classes, **kwargs):\n",
     "        self.classes=classes\n",
     "        \n",
     "        # YOUR CODE HERE\n",
+    "        self.parser = kwargs.get('parser', parse_string)\n",
+    "        self.parserargs = kwargs.get('parserargs', {})\n",
+    "        \n",
     "        self.nexamples = 0 \n",
     "        self.vocab = defaultdict(vocabfactory)\n",
     "        self.classcounts = defaultdict(int)\n",
@@ -268,7 +271,7 @@
     "        # YOUR CODE HERE\n",
     "        self.classcounts[y] += 1\n",
     "        self.nexamples += 1 \n",
-    "        words = parse_string(str(x))\n",
+    "        words = self.parser(str(x), **self.parserargs)\n",
     "        for word in words: \n",
     "            self.vocab[word][y] += 1  \n",
     "            self.wordperclasscounts[y] += 1 \n",
@@ -326,7 +329,7 @@
     "        '''\n",
     "        \n",
     "        # YOUR CODE HERE\n",
-    "        words = parse_string(str(x))\n",
+    "        words = self.parser(str(x), **self.parserargs)\n",
     "        wordcounts = defaultdict(int)\n",
     "        vocablen = len(self.vocab.keys())\n",
     "        \n",
@@ -441,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -452,8 +455,8 @@
      "text": [
       "[Info] training a classifier for following classes neg, pos\n",
       "[Info] testing a classifier\n",
-      "[Info] Accuracy = 0.815\n",
-      "[Info] Elapsed time = 6.91613602638\n"
+      "[Info] Accuracy = 0.821666666667\n",
+      "[Info] Elapsed time = 6.56940889359\n"
      ]
     }
    ],
@@ -714,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -726,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -791,7 +794,7 @@
        "max        1.00000"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -864,7 +867,7 @@
        "4  9495_8          1  Superbly trashy and wondrously unpretentious 8..."
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -875,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -899,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -911,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -967,7 +970,7 @@
        "4   12128_7  A very accurate depiction of small time mob li..."
       ]
      },
-     "execution_count": 22,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1303,7 +1306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -1332,17 +1335,152 @@
     "\n",
     "Doing this simple trick can further improve your accuracy to 0.81768.\n",
     "\n",
-    "For final submission attach the screen-shot of the leader-board with your score\n",
+    "For final submission attach the screen-shot of the leader-board with your score\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def parse_without_stopwords(string, **kwargs):\n",
+    "    words = set(parse_string(string))\n",
+    "    return list(words.difference(kwargs['stopwords']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Let's split the training data into two halves and test our accuracy...\n",
+    "traindata,trainlabels,testdata,testlabels=t.split_data(Xt.reshape((Xt.shape[0],1)),Yt)\n",
+    "classes=np.unique(trainlabels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Info] training a classifier for following classes 0, 1\n",
+      "[Info] testing a classifier\n",
+      "[Info] Accuracy = 0.859866666667\n",
+      "[Info] Training time = 5.98870396614\n",
+      "[Info] Testing time = 93.7387969494\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Now lets go and train the model and see its performance...\n",
+    "print '[Info] training a classifier for following classes {}, {}'.format(classes[0],classes[1])\n",
+    "nb=NaiveBayes(classes, parser=parse_without_stopwords, parserargs={'stopwords': stopwords})\n",
+    "starttime = time.time()\n",
+    "nb.train(traindata,trainlabels)\n",
+    "elapsedtime1 = time.time() - starttime\n",
+    "print '[Info] testing a classifier'\n",
+    "starttime = time.time()\n",
+    "pclasses=nb.test(testdata)\n",
+    "elapsedtime2 = time.time() - starttime\n",
+    "pclasses=pclasses.astype(dtype=int) #NOTE: MANUALLY ADDED LINE\n",
+    "acc=np.sum(pclasses==testlabels)/float(testlabels.shape[0])\n",
+    "print \"[Info] Accuracy = {}\".format(acc) \n",
+    "print '[Info] Training time =', elapsedtime1\n",
+    "print '[Info] Testing time =', elapsedtime2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training a Classifier on Full training set with classes = [0 1]\n",
+      "Elapsed Time = 8.72303390503\n"
+     ]
+    }
+   ],
+   "source": [
+    "classes= np.unique(Yt)\n",
+    "print 'Training a Classifier on Full training set with classes =', classes\n",
+    "nb=NaiveBayes(classes, parser=parse_without_stopwords, parserargs={'stopwords': stopwords})\n",
+    "starttime = time.time()\n",
+    "nb.train(Xt.reshape(Xt.shape[0],1),Yt)\n",
+    "elapsedtime = time.time() - starttime\n",
+    "print 'Elapsed Time =', elapsedtime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elapsed time = 428.380465984\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Get the test data...\n",
+    "Xtest=test['review']\n",
+    "Xtest=np.array(Xtest.reshape((Xtest.shape[0],1)))\n",
+    "#test the classifier on the provided test set...\n",
+    "starttime = time.time()\n",
+    "pclasses=nb.test(Xtest)\n",
+    "elapsedtime = time.time() - starttime\n",
+    "print 'Elapsed time =', elapsedtime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#write the result in the kaggle's required format\n",
+    "output = pd.DataFrame( data={\"id\":test[\"id\"], \"sentiment\":pclasses} )\n",
     "\n",
-    "Insert ScreenShot of Leader-board Below\n",
-    "----------------------------------------\n"
+    "# Use pandas to write the comma-separated output file\n",
+    "output.to_csv( \"./Naive_bays_Bag_of_Words_model.csv\", index=False, quoting=3 )"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"./kagglescore.png\">"
+    "Insert ScreenShot of Leader-board Below\n",
+    "----------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src = 'myscore.png'>"
    ]
   }
  ],
