Found the best value of k using cross validation; mean log score of 0.7

--- a/Assignments/Assignment03/Assignment#3a-KNN.ipynb
+++ b/Assignments/Assignment03/Assignment#3a-KNN.ipynb
@@ -31,14 +31,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
-    "#Write you answer here"
+    "To compute the euclidean distance b/w ONE test example and ONE training example, we have d multiplications, and (d-1) additions.\n",
+    "\n",
+    "Thus, computation of euclidean distance b/w ONE test example and M training examples, we have...\n",
+    "        # number of multiplications = m x d\n",
+    "        number of additions = m x (d-1)"
    ]
   },
   {
@@ -860,13 +862,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "    Accuracy with non-normalized features: 75% \n",
+    "    Accuracy with Normalized features: 77%\n",
+    "\n",
+    "We're seeing improvement because after feature scaling, we're giving equal importance to both features in terms of difference(variance)\n",
+    "\n",
+    "We COULD see a decrease in performance in case where larger variance scale has more importance than shorter variance scale by default. "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -943,8 +950,8 @@
    "source": [
     "What can you conclude ?\n",
     "====================\n",
-    "Please write your observation....\n",
-    "\n"
+    "Using all features has improved the accuracy drastically. This makes sense, because now we're using more information for computing distances between training examples. \n",
+    "Whereas, when using only two features, a training example could be luckily near to a test example w.r.t only two features we cared about but far away w.r.t other features we left out. This situation could lead to misclassification."
    ]
   },
   {
@@ -1154,8 +1161,9 @@
    "metadata": {},
    "source": [
     "### Note the improvement of properly configured classifier w.r.t. to the classifier trained using only 3 Neigbours\n",
-    "\n",
-    "Comment on your experience."
+    "        Seven neighbours performance = 86%\n",
+    "        Three neighbours performance = 77%\n",
+    "This makes sense, because seven neighbours classifier is somewhat less prone to overfitting, because seven neighbours looks for more neighbourhood; while three neighbours look for three votes from around the neighbourhood which could potentially contain outliers, thereby leading to misclassification. "
    ]
   },
   {
