--- a/Assignments/Assignment03/Assignment#3a-KNN-Kaggle.ipynb
+++ b/Assignments/Assignment03/Assignment#3a-KNN-Kaggle.ipynb
@@ -1225,12 +1225,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "source": [
+    "<img src = './kagglescores.png'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
