--- a/Labtasks/Lab8/Recommender_system-unsolved.ipynb
+++ b/Labtasks/Lab8/Recommender_system-unsolved.ipynb
@@ -30,20 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import tools as t"
+    "#import tools as t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -118,17 +118,17 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>462.734120</td>\n",
-       "      <td>425.257693</td>\n",
-       "      <td>3.531093</td>\n",
-       "      <td>8.835358e+08</td>\n",
+       "      <td>462.676733</td>\n",
+       "      <td>424.801587</td>\n",
+       "      <td>3.528120</td>\n",
+       "      <td>8.835198e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>267.104894</td>\n",
-       "      <td>330.912491</td>\n",
-       "      <td>1.125396</td>\n",
-       "      <td>5.350611e+06</td>\n",
+       "      <td>266.538794</td>\n",
+       "      <td>330.221092</td>\n",
+       "      <td>1.125617</td>\n",
+       "      <td>5.341593e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -139,29 +139,29 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>254.000000</td>\n",
-       "      <td>174.000000</td>\n",
+       "      <td>255.000000</td>\n",
+       "      <td>175.000000</td>\n",
        "      <td>3.000000</td>\n",
-       "      <td>8.794487e+08</td>\n",
+       "      <td>8.794488e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
        "      <td>447.000000</td>\n",
        "      <td>321.000000</td>\n",
        "      <td>4.000000</td>\n",
-       "      <td>8.828272e+08</td>\n",
+       "      <td>8.828270e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
        "      <td>682.000000</td>\n",
-       "      <td>631.000000</td>\n",
+       "      <td>630.000000</td>\n",
        "      <td>4.000000</td>\n",
-       "      <td>8.882674e+08</td>\n",
+       "      <td>8.882065e+08</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
        "      <td>943.000000</td>\n",
-       "      <td>1682.000000</td>\n",
+       "      <td>1681.000000</td>\n",
        "      <td>5.000000</td>\n",
        "      <td>8.932866e+08</td>\n",
        "    </tr>\n",
@@ -172,16 +172,16 @@
       "text/plain": [
        "            user_id       item_id        rating     timestamp\n",
        "count  75000.000000  75000.000000  75000.000000  7.500000e+04\n",
-       "mean     462.734120    425.257693      3.531093  8.835358e+08\n",
-       "std      267.104894    330.912491      1.125396  5.350611e+06\n",
+       "mean     462.676733    424.801587      3.528120  8.835198e+08\n",
+       "std      266.538794    330.221092      1.125617  5.341593e+06\n",
        "min        1.000000      1.000000      1.000000  8.747247e+08\n",
-       "25%      254.000000    174.000000      3.000000  8.794487e+08\n",
-       "50%      447.000000    321.000000      4.000000  8.828272e+08\n",
-       "75%      682.000000    631.000000      4.000000  8.882674e+08\n",
-       "max      943.000000   1682.000000      5.000000  8.932866e+08"
+       "25%      255.000000    175.000000      3.000000  8.794488e+08\n",
+       "50%      447.000000    321.000000      4.000000  8.828270e+08\n",
+       "75%      682.000000    630.000000      4.000000  8.882065e+08\n",
+       "max      943.000000   1681.000000      5.000000  8.932866e+08"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,19 +206,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def user_item_rating(data):\n",
-    "    return"
+    "    numrows = len(df['user_id'].unique())\n",
+    "    numcols = len(df['item_id'].unique())\n",
+    "    out = np.zeros((numrows, numcols))\n",
+    "    for row in data.values: \n",
+    "        out[row[0]-1, row[1]-1] = row[2]\n",
+    "    return out "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -228,16 +233,16 @@
      "output_type": "stream",
      "text": [
       "(943, 1682) (943, 1682)\n",
-      "Train Matrix  [[ 5.  0.  4. ...,  0.  0.  0.]\n",
-      " [ 4.  0.  0. ...,  0.  0.  0.]\n",
+      "Train Matrix  [[ 5.  3.  4. ...,  0.  0.  0.]\n",
+      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
       " [ 0.  0.  0. ...,  0.  0.  0.]\n",
       " ..., \n",
       " [ 0.  0.  0. ...,  0.  0.  0.]\n",
       " [ 0.  0.  0. ...,  0.  0.  0.]\n",
       " [ 4.  0.  0. ...,  0.  0.  0.]]\n",
       "\n",
-      "Test Matrix  [[ 0.  3.  0. ...,  0.  0.  0.]\n",
-      " [ 0.  0.  0. ...,  0.  0.  0.]\n",
+      "Test Matrix  [[ 0.  0.  0. ...,  0.  0.  0.]\n",
+      " [ 4.  0.  0. ...,  0.  0.  0.]\n",
       " [ 0.  0.  0. ...,  0.  0.  0.]\n",
       " ..., \n",
       " [ 0.  0.  0. ...,  0.  0.  0.]\n",
@@ -267,14 +272,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def cosine_similarity(data):\n",
-    "    return"
+    "    dots = data.dot(data.T)\n",
+    "    norms = (np.diag(dots))**(1./2) \n",
+    "    norms = norms[:, np.newaxis]\n",
+    "    norms = norms.dot(norms.T)\n",
+    "    out = dots / (norms+1e-16)\n",
+    "    return 1-out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "user_similarity = cosine_similarity(train_data_matrix)\n",
+    "item_similarity = cosine_similarity(train_data_matrix.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(943, 943) (1682, 1682)\n",
+      "0.866573010982\n",
+      "0.721793571361\n"
+     ]
+    }
+   ],
+   "source": [
+    "print user_similarity.shape, item_similarity.shape\n",
+    "print user_similarity[0][1]\n",
+    "print item_similarity[0][1] "
    ]
   },
   {
@@ -325,28 +370,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"user_sim.gif\">\n",
-    "<img src=\"item_sim.gif\">"
+    "<img src=\"user_predict.gif\">\n",
+    "<img src=\"item_predict.gif\">"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def predict(ratings, similarity, type='user'):\n",
-    " \n",
-    "    return pred"
+    "    if type=='user':\n",
+    "        means = np.mean(ratings, axis=1, keepdims=True)\n",
+    "        out = np.zeros_like(ratings)\n",
+    "        \n",
+    "        num = similarity.dot(ratings-means)\n",
+    "        denum = np.sum(np.abs(similarity), axis=1, keepdims=True)\n",
+    "        out = means+(num/denum)\n",
+    "    else: \n",
+    "        out = np.zeros_like(ratings)\n",
+    "        #for user in xrange(ratings.shape[0]):\n",
+    "        res = ratings.dot(similarity)\n",
+    "        out = res / np.sum(np.abs(similarity), axis=1) \n",
+    "    return out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 97,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -356,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 98,
    "metadata": {
     "collapsed": false
    },
@@ -365,10 +421,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.38678157  0.40796233  0.41680874 ...,  0.46789536  0.4600178\n",
-      "  0.45610711]\n",
-      "[ 1.65606422  0.60419462  0.51497296 ...,  0.3178457   0.32016055\n",
-      "  0.32008802]\n"
+      "[ 0.3716121   0.38723028  0.40124661 ...,  0.44992552  0.43976275\n",
+      "  0.44649227]\n",
+      "[ 1.58433995  0.55063093  0.49332769 ...,  0.29784113  0.29778281\n",
+      "  0.29532385]\n"
      ]
     }
    ],
@@ -386,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 99,
    "metadata": {
     "collapsed": true
    },
@@ -402,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false
    },
@@ -411,8 +467,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "User-based CF RMSE: 3.12505852708\n",
-      "Item-based CF RMSE: 3.45110064044\n"
+      "User-based CF RMSE: 3.13185110258\n",
+      "Item-based CF RMSE: 3.45769122256\n"
      ]
     }
    ],
@@ -423,10 +479,11 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [conda root]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "conda-root-py"
   },
   "language_info": {
    "codemirror_mode": {
