evaluate_numerical_features() - Bug removed...I think.

--- a/Assignments/Assignment04/Assignment#3b-Decision Trees-Continuous-Variables.ipynb
+++ b/Assignments/Assignment04/Assignment#3b-Decision Trees-Continuous-Variables.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 82,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -279,28 +279,28 @@
     "            classcounts[classidx[c]] = np.sum(Y == c)\n",
     "        \n",
     "        i = 0\n",
-    "        for example, label in itertools.izip(f[:-1], Y): \n",
+    "        for example, label in itertools.izip(f, Y): \n",
     "            acc[classidx[label]] += 1 \n",
-    "            HDy = self.calculateEntropy(acc)\n",
-    "            HDn = self.calculateEntropy(classcounts-acc)\n",
-    "            splitscores[i] = ((i+1./f.shape[0])*HDy) + ((1-(i+1./f.shape[0]))*HDn)\n",
-    "            print splitscores[i],\n",
+    "            PDy = (i+1) / (1. * f.shape[0])\n",
+    "            PDn = 1-PDy\n",
+    "            HDy = self.calculateEntropy(acc) if (PDy > 0) else 0\n",
+    "            HDn = self.calculateEntropy(classcounts-acc) if (PDn > 0) else 0\n",
+    "            splitscores[i] = (PDy*HDy) + (PDn*HDn) \n",
     "            i += 1 \n",
     "        #raise NotImplementedError()\n",
     "        \n",
     "        HD = self.calculateEntropy(classcounts)\n",
-    "        maxgain = HD-splitscores.max()\n",
-    "        split = f[splitscores.argmax()]\n",
+    "        maxgain = HD-splitscores.min()\n",
+    "        split = f[splitscores.argmin()]\n",
     "        Xlidx = np.nonzero(feat <= split)\n",
     "        Xridx = np.nonzero(feat > split)\n",
     "        \n",
     "        return split,maxgain,Xlidx,Xridx\n",
     "    \n",
     "    def calculateEntropy(self, D):\n",
-    "        if np.sum(D) == 0:\n",
-    "            print 'zero here\\n'\n",
-    "        Dprobs = D / (1. * np.sum(D))\n",
-    "        Dentropy = np.sum(Dprobs * np.log(Dprobs+1e-16)) * -1\n",
+    "        \n",
+    "        Dprobs = (D / (1. * np.sum(D)))+1e-16\n",
+    "        Dentropy = np.sum(Dprobs * np.log(Dprobs)) * -1\n",
     "        return Dentropy \n",
     "    \n",
     "    def predict(self, X):\n",
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -669,10 +669,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "149\n",
-      "0.625857378488 -0.004205799862 -0.627278044949 -1.24290946733 -1.85062570778 -2.44992634611 -3.04028317946 -3.62113835654 -4.19190235223 -4.75195176531 -5.30062691933 -5.83722924403 -6.36101841127 -6.87120919568 -7.36696802546 -7.84740918344 -8.31159061171 -8.75850926546 -9.18709595177 -9.59620957765 -9.98463071724 -10.3510543901 -10.694081921 -11.0122117234 -11.303828814 -11.5671928221 -11.8004241974 -12.0014882482 -12.1681765401 -12.2980850555 -12.3885883334 -12.436808565 -12.4395782772 -12.3933947467 -12.2943635795 -12.1381278365 -11.9197774799 -11.6337313941 -11.2735801395 -10.8318706891 -10.2998021826 -9.66677892123 -8.91972128099 -8.04193630183 -7.01111018658 -5.79531232338 -4.34355094426 -2.55549225482 0.0 4.80457453133 8.27328516335 11.2505521922 13.9153272116 16.3523293333 18.6112761546 20.7248875279 22.7163175548 24.6027980788 26.3976388299 28.1114179924 29.7527355199 31.3287131599 32.8453394167 34.3077152315 35.7202336881 37.0867144842 38.4105065431 39.6945676652 40.9415272881 42.1537366022 43.3333090448 44.4821533716 45.6020009263 46.6944283234 47.7608764669 48.8026666121 49.821014023 50.8170396549 51.7917802069 52.7461968158 53.6811826144 54.5975693295 55.4961330699 56.3775994214 57.2426479503 58.0919161978 58.9260032348 59.7454728346 60.5508563149 61.3426550884 62.1213429603 62.8873682014 63.6411554238 64.3831072825 65.113606021 65.8330148801 66.5416793827 67.2399285088 67.9280757721 68.6064202074 69.2752472783 69.9348297135 70.585428277 71.2272924797 71.8606612378 72.4857634821 73.1028187229 73.7120375749 74.3136222451 74.9077669861 75.4946585199 76.0744764319 76.6473935396 77.213576237 77.7731848169 78.3263737728 78.8732920822 79.4140834718 79.9488866673 80.4778356277 81.0010597666 81.5186841589 82.0308297379 82.5376134788 83.0391485741 83.5355445972 84.0269076589 84.5133405541 84.9949429012 85.4718112742 85.9440393275 86.4117179148 86.8749352012 87.3337767706 87.7883257266 88.2386627894 88.6848663874 89.1270127447 89.5651759638 89.9994281053 90.429839263 90.8564776364 91.2794095984 91.698699762 92.1144110421 92.5266047156 92.9353404782 93.3406764997 \n",
-      "split = 7.7\n",
-      "-92.7073088059\n"
+      "149\n"
      ]
     }
    ],
@@ -686,14 +683,12 @@
     "split,mingain,Xlidx,Xridx=dt.evaluate_numerical_attribute(X[:,0],Y)\n",
     "\n",
     "# You should get following result:, see the example on book page 490-491, Data Mining and Analysis...\n",
-    "# Split=5.45, H(DY)=0.577004250316,P(DY)=0.342281879195,H(DN)=0.290715865467,P(DN)=0.657718120805,gain=0.388707191825\n",
-    "print '\\nsplit =', split\n",
-    "print mingain"
+    "# Split=5.45, H(DY)=0.577004250316,P(DY)=0.342281879195,H(DN)=0.290715865467,P(DN)=0.657718120805,gain=0.388707191825"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -701,16 +696,38 @@
     {
      "data": {
       "text/plain": [
-       "(7.9000000000000004, 4.2999999999999998)"
+       "7.9000000000000004"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X[:, 0].max(), X[:, 0].min()"
+    "X[:, 0].max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5.4000000000000004, 0.63336769382310754)"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "split, mingain "
    ]
   },
   {
