--- a/Assignments/Assignment04/Assignment#3b-Decision Trees-Continuous-Variables.ipynb
+++ b/Assignments/Assignment04/Assignment#3b-Decision Trees-Continuous-Variables.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 89,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -191,6 +191,7 @@
     "        ## now go and train a model for each class...\n",
     "        # YOUR CODE HERE\n",
     "        self.tree = self.build_tree(X, Y, self.maxdepth)\n",
+    "        \n",
     "        #raise NotImplementedError()\n",
     "        \n",
     "    def getPurityResult(self, Y):\n",
@@ -282,40 +283,41 @@
     "        f=feat[sidx] # sorted features\n",
     "        sY=Y[sidx] # sorted features class labels...\n",
     "        \n",
-    "        # YOUR CODE HERE\n",
-    "        classidx = {c: i for i, c in enumerate(np.unique(self.classes))}\n",
-    "        Dcounts = np.zeros((nclasses,))\n",
-    "        splitscores = np.zeros((f.shape[0],))\n",
+    "        # YOUR CODE HERE     \n",
+    "        YclassCounts = self.generateCounts(Y, nclasses)\n",
     "        \n",
-    "        for c in np.unique(self.classes):\n",
-    "            Dcounts[classidx[c]] = np.sum(Y == c)\n",
     "        points = np.sort(np.unique(feat)) \n",
     "        midpoints = (points[:-1]+points[1:]) / 2.\n",
     "        splitscores = np.zeros((midpoints.shape[0],))\n",
-    "        for i, splitpoint in enumerate(midpoints): \n",
-    "            Dycounts = np.zeros((nclasses,))\n",
-    "            for c in np.unique(self.classes):\n",
-    "                Dycounts[classidx[c]] = np.sum(Y[feat <= splitpoint] == c)\n",
-    "            Dncounts = Dcounts-Dycounts\n",
-    "            HDy = self.calculateEntropy(Dycounts)\n",
-    "            HDn = self.calculateEntropy(Dncounts)\n",
-    "            Py = np.sum(Dycounts) / (1.*feat.shape[0])\n",
-    "            Pn = 1-Py\n",
-    "            splitscores[i] = (Py*HDy)+(Pn*HDn)\n",
-    "            #print splitpoint, splitscores[i], \n",
-    "        #raise NotImplementedError()\n",
     "        \n",
+    "        for i, splitpoint in enumerate(midpoints):\n",
+    "            DyClassCounts = self.generateCounts(Y[feat <= splitpoint], nclasses)\n",
+    "            DnClassCounts = YclassCounts - DyClassCounts\n",
+    "            splitscores[i] = self.calculateSplitEntropy(DyClassCounts, DnClassCounts)\n",
+    "            \n",
     "        v = midpoints[splitscores.argmin()]\n",
     "        score = splitscores.min()\n",
-    "        Xlidx = np.nonzero(feat <= v)\n",
-    "        Xridx = np.nonzero(feat > v)\n",
+    "        Xlidx = np.nonzero(feat <= score)\n",
+    "        Xridx = np.nonzero(feat > score)\n",
+    "        \n",
     "        return v, score, Xlidx, Xridx\n",
     "    \n",
+    "    def generateCounts(self, labels, numclasses):\n",
+    "        out = np.zeros((numclasses,))\n",
+    "        for i, c in enumerate(np.unique(labels)):\n",
+    "            out[i] = np.sum(labels == c)\n",
+    "        return out \n",
+    "    \n",
     "    def calculateEntropy(self, D):\n",
-    "        \n",
-    "        Dprobs = (D / (1. * np.sum(D)))+1e-16\n",
-    "        Dentropy = np.sum(Dprobs * np.log(Dprobs)) * -1\n",
-    "        return Dentropy \n",
+    "        Dprobs = D / (1. * np.sum(D))+1e-16\n",
+    "        out = np.sum(Dprobs * np.log(Dprobs)) * -1\n",
+    "        return out\n",
+    "    \n",
+    "    def calculateSplitEntropy(self, Dy, Dn):\n",
+    "        nexamples = np.sum(Dy+Dn) * 1.\n",
+    "        a = (np.sum(Dy)/nexamples)*(self.calculateEntropy(Dy))\n",
+    "        b = (np.sum(Dn)/nexamples)*(self.calculateEntropy(Dn))\n",
+    "        return a+b\n",
     "    \n",
     "    def predict(self, X):\n",
     "        \n",
@@ -396,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -414,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -450,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -465,7 +467,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Data Set Dimensions= (149L, 4L)  True Class labels dimensions (149L,)\n"
+      " Data Set Dimensions= (149, 4)  True Class labels dimensions (149,)\n"
      ]
     }
    ],
@@ -474,119 +476,6 @@
     "X=np.asarray(data[['SepalLength','SepalWidth','PetalLength','PetalWidth']].dropna())\n",
     "Y=np.asarray(data['Class'].dropna())\n",
     "print \" Data Set Dimensions=\", X.shape, \" True Class labels dimensions\", Y.shape   \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa'\n",
-      " 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa'\n",
-      " 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa'\n",
-      " 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa'\n",
-      " 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa'\n",
-      " 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa'\n",
-      " 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa'\n",
-      " 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa'\n",
-      " 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa'\n",
-      " 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-virginica' 'Iris-virginica' 'Iris-virginica'\n",
-      " 'Iris-virginica' 'Iris-virginica' 'Iris-virginica' 'Iris-virginica'\n",
-      " 'Iris-virginica' 'Iris-virginica' 'Iris-virginica' 'Iris-virginica'\n",
-      " 'Iris-virginica' 'Iris-virginica' 'Iris-virginica' 'Iris-virginica'\n",
-      " 'Iris-virginica' 'Iris-virginica' 'Iris-virginica' 'Iris-virginica'\n",
-      " 'Iris-virginica' 'Iris-virginica' 'Iris-virginica' 'Iris-virginica'\n",
-      " 'Iris-virginica' 'Iris-virginica' 'Iris-virginica' 'Iris-virginica'\n",
-      " 'Iris-virginica' 'Iris-virginica' 'Iris-virginica' 'Iris-virginica'\n",
-      " 'Iris-virginica' 'Iris-virginica' 'Iris-virginica' 'Iris-virginica'\n",
-      " 'Iris-virginica' 'Iris-virginica' 'Iris-virginica' 'Iris-virginica'\n",
-      " 'Iris-virginica' 'Iris-virginica' 'Iris-virginica' 'Iris-virginica'\n",
-      " 'Iris-virginica' 'Iris-virginica' 'Iris-virginica' 'Iris-virginica'\n",
-      " 'Iris-virginica' 'Iris-virginica' 'Iris-virginica']\n"
-     ]
-    }
-   ],
-   "source": [
-    "print Y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa'\n",
-      " 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa'\n",
-      " 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa'\n",
-      " 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa'\n",
-      " 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa'\n",
-      " 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa'\n",
-      " 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa'\n",
-      " 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa'\n",
-      " 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa'\n",
-      " 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-setosa' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'\n",
-      " 'Iris-versicolor' 'Iris-versicolor' 'Iris-versicolor'] 149 ['Iris-setosa' 'Iris-versicolor']\n"
-     ]
-    }
-   ],
-   "source": [
-    "Y[Y=='Iris-virginica']='Iris-versicolor'\n",
-    "print Y, len(Y), np.unique(Y)"
    ]
   },
   {
@@ -602,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -617,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -630,7 +519,7 @@
        "7"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -662,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -693,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -701,34 +590,21 @@
     {
      "data": {
       "text/plain": [
-       "(5.4500000000000002,\n",
-       " 0.2694312940767965,\n",
-       " (array([  0,   1,   2,   3,   4,   5,   6,   7,   8,   9,  10,  11,  12,\n",
-       "          15,  16,  18,  19,  20,  21,  22,  23,  24,  25,  26,  27,  28,\n",
-       "          29,  30,  31,  33,  34,  36,  37,  38,  39,  40,  41,  42,  43,\n",
-       "          44,  45,  46,  47,  48,  56,  58,  59,  83,  92,  97, 105], dtype=int64),),\n",
-       " (array([ 13,  14,  17,  32,  35,  49,  50,  51,  52,  53,  54,  55,  57,\n",
-       "          60,  61,  62,  63,  64,  65,  66,  67,  68,  69,  70,  71,  72,\n",
-       "          73,  74,  75,  76,  77,  78,  79,  80,  81,  82,  84,  85,  86,\n",
-       "          87,  88,  89,  90,  91,  93,  94,  95,  96,  98,  99, 100, 101,\n",
-       "         102, 103, 104, 106, 107, 108, 109, 110, 111, 112, 113, 114, 115,\n",
-       "         116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128,\n",
-       "         129, 130, 131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141,\n",
-       "         142, 143, 144, 145, 146, 147, 148], dtype=int64),))"
+       "5.4500000000000002"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "split, minscore, Xlidx, Xridx"
+    "split "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -762,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 93,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -790,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -813,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 95,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -3332,8 +3208,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
@@ -3347,7 +3224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
